# commodity-mvp

./: .gitignore  MACROSIGNAL_BUILD_PLAN.md  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: cases.py  health.py  market_data.py
backend/app/providers/: __init__.py  base.py  cftc_positioning_provider.py  demo_dataset_provider.py  eia_fundamentals_provider.py
backend/app/repositories/: market_history_repository.py
backend/app/schemas/: case_study.py  evidence_gate.py  market_data.py  memo.py  scenario.py
backend/app/services/: evidence_gate.py  historical_backfill.py  memo_generator.py
backend/data/cases/: red-sea-shipping-risk.json
backend/scripts/: backfill_market_history.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_cases.py  test_market_data.py
backend/tests/providers/: test_cftc_positioning_provider.py  test_demo_dataset_provider.py  test_eia_fundamentals_provider.py
backend/tests/repositories/: test_market_history_repository.py
backend/tests/schemas/: test_case_study_schema.py
backend/tests/services/: test_evidence_gate.py  test_historical_backfill.py  test_memo_generator.py
docs/: DESIGN-SPEC-MacroSignal-Oil.md  DEV-TASKS-MacroSignal-Oil.md  IMPLEMENTATION-PLAN-MacroSignal-Oil.md  PRD-MacroSignal-Oil.md  TECH-ARCH-MacroSignal-Oil.md  VISUAL-EVIDENCE-PACK.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: smoke.spec.ts
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
(+45 files in other folders)
