[project]
name = "macrosignal-oil-backend"
version = "0.1.0"
description = "FastAPI backend for the MacroSignal Oil case-study simulator."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pytest>=8.0.0",
  "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
